Report passive prevent defaulted event listeners correctly to the console.

Previously only document level listeners would be reported to the console
that were preventDefaulted.

Load the LocalDOMWindow from the event path instead.

BUG=604743

Review URL: https://codereview.chromium.org/1897953004

Cr-Commit-Position: refs/heads/master@{#388240}

Former-commit-id: c55f4ccbd722aa7eaa4e94309661e10d128ae098